[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0901961, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = 100.0
margin_right = 300.0
margin_bottom = 200.0
custom_colors/font_color = Color( 0.545098, 0.0784314, 0.0784314, 1 )
text = "SIMULATION OF THE ETERNAL PATH
- VILLAIN EDITION -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 46.0
rect_min_size = Vector2( 300, 0 )
text = "NEW GAME"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 300.0
margin_bottom = 107.0
rect_min_size = Vector2( 300, 0 )
text = "CONTINUE"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 300.0
margin_bottom = 168.0
rect_min_size = Vector2( 300, 0 )
text = "LOAD GAME"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 183.0
margin_right = 300.0
margin_bottom = 229.0
rect_min_size = Vector2( 300, 0 )
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 244.0
margin_right = 300.0
margin_bottom = 290.0
rect_min_size = Vector2( 300, 0 )
text = "QUIT"

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_right = 200.0
text = "Version 1.0.0 - Godot Engine"
__meta__ = {
"_edit_use_anchors_": false
}
